# KRAKEN

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
.github/workflows/: build-windows.yml
KRAKEN/include/: Defines.h  KRAKEN.h
KRAKEN/include/KRAKEN/: Defines.h  KRAKEN.h  Types.h
KRAKEN/include/KRAKEN/core/: Application.h  Globals.h
KRAKEN/include/KRAKEN/core/event/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
KRAKEN/include/KRAKEN/core/input/: Input.h
KRAKEN/include/KRAKEN/core/renderer/: Renderer.h  VulkanGlobals.h
KRAKEN/include/KRAKEN/core/util/: Layer.h  LayerStack.h  Log.h
KRAKEN/include/KRAKEN/core/window/: Window.h
KRAKEN/include/platform/windows/core/window/: WindowsWindow.h
KRAKEN/src/KRAKEN/: Defines.h  KRAKEN.h  pch.cpp  pch.h
KRAKEN/src/KRAKEN/core/: Application.cpp  Application.h  Globals.cpp
KRAKEN/src/KRAKEN/core/event/: ApplicationEvent.h  Event.h
KRAKEN/src/KRAKEN/core/graphics/: Renderer.cpp  Renderer.h  VulkanGlobals.cpp  VulkanUtils.cpp
KRAKEN/src/KRAKEN/core/graphics/vulkan/: Context.cpp  Context.h  Device.cpp  Device.h  Globals.cpp  Globals.h  Swapchain.cpp  Swapchain.h  Util.cpp  Util.h  Utils.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanGlobals.cpp  VulkanGlobals.h  VulkanUtils.cpp  VulkanUtils.h
KRAKEN/src/KRAKEN/core/input/: Input.cpp  InputCodes.h
KRAKEN/src/KRAKEN/core/renderer/: Renderer.cpp  Renderer.h  VulkanGlobals.cpp  VulkanUtils.cpp
KRAKEN/src/KRAKEN/core/util/: Layer.cpp  LayerStack.cpp  Log.cpp
KRAKEN/src/KRAKEN/core/window/: Window.cpp  Window.h
KRAKEN/src/platform/windows/core/: WindowsWindow.cpp
KRAKEN/src/platform/windows/core/window/: WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/res/shader/: main.frag  main.vert  test.frag  test.vert
Sandbox/src/: Main.cpp  main.cpp
Sandbox/src/layers/: SandboxLayer.cpp  SandboxLayer.h
Yggdrasil/: CMakeLists.txt
Yggdrasil/res/Shader/: YggComplex.glsl
Yggdrasil/src/Yggdrasil/: Base.h  Defines.h  Yggdrasil.cpp  Yggdrasil.h  pch.cpp  pch.h
Yggdrasil/src/Yggdrasil/Common/: Engine.cpp  Engine.h
Yggdrasil/src/Yggdrasil/Common/Memory/: Pool.h
Yggdrasil/src/Yggdrasil/Common/Util/: FileUtil.cpp  FileUtil.h  Logger.cpp  Logger.h
Yggdrasil/src/Yggdrasil/Common/Window/: Input.cpp  Input.h  Window.cpp  Window.h
Yggdrasil/src/Yggdrasil/RenderEngine/: GraphicsContext.cpp  GraphicsContext.h  GraphicsDevice.cpp  GraphicsDevice.h  RenderEngine.cpp  RenderEngine.h  RenderUtil.cpp  RenderUtil.h  Screen.cpp  Screen.h
Yggdrasil/src/Yggdrasil/RenderEngine/Descriptor/: DescriptorSetAllocator.cpp  DescriptorSetAllocator.h  DescriptorSetLayoutCache.cpp  DescriptorSetLayoutCache.h  Layout.h
Yggdrasil/src/Yggdrasil/RenderEngine/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  PipelineLayoutCache.cpp  PipelineLayoutCache.h
Yggdrasil/src/Yggdrasil/RenderEngine/Shader/: DirStackFileIncluder.h  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderReflect.cpp  ShaderReflect.h
Yggdrasil/src/Yggdrasil/core/: Application.cpp  Application.h  Globals.cpp  Globals.h
Yggdrasil/src/Yggdrasil/core/event/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Yggdrasil/src/Yggdrasil/core/graphics/: Camera.cpp  Camera.h  Context.cpp  Context.h  Device.cpp  Device.h  Globals.cpp  Globals.h  Graphics.cpp  Graphics.h  GraphicsEngine.cpp  GraphicsEngine.h  PipelineFactory.cpp  PipelineFactory.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Screen.cpp  Screen.h  ShaderCompiler.cpp  ShaderCompiler.h  Util.cpp  Util.h
Yggdrasil/src/Yggdrasil/core/graphics/memory/: Allocator.cpp  Allocator.h  Buffer.cpp  Buffer.h  Descriptor.cpp  Descriptor.h  Image.cpp  Image.h  MemoryEnums.h  Resource.cpp  Resource.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h
Yggdrasil/src/Yggdrasil/core/graphics/model/: Mesh.cpp  Mesh.h
Yggdrasil/src/Yggdrasil/core/graphics/resources/: BufferManager.cpp  BufferManager.h  ResourceManager.cpp  ResourceManager.h  TextureManager.cpp  TextureManager.h
Yggdrasil/src/Yggdrasil/core/graphics/vulkan/: Context.cpp  Context.h  Globals.cpp  Globals.h  PipelineFactory.cpp  PipelineFactory.h  Util.cpp  Util.h
Yggdrasil/src/Yggdrasil/core/input/: Input.cpp  Input.h  InputCodes.h
Yggdrasil/src/Yggdrasil/core/memory/: Pool.h
Yggdrasil/src/Yggdrasil/core/util/: FileUtil.cpp  FileUtil.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h
Yggdrasil/src/Yggdrasil/core/util/layers/: DearImguiLayer.cpp  DearImguiLayer.h
Yggdrasil/src/Yggdrasil/core/window/: Window.cpp  Window.h
Yggdrasil/src/platform/windows/core/window/: WindowsWindow.cpp  WindowsWindow.h
scripts/: GenerateVS2019.bat  Yggdrasil.cmake  YggdrasilUtils.cmake
